<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_container_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/position_tv_item"
                android:text="@string/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"/>
<!-- todo debug               android:visibility="gone" />-->

            <ImageView
                android:id="@+id/avatar_iv_item"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView android:id="@+id/name_tv_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>

                <TextView android:id="@+id/author_name_tv_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/author_name"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

<!--        <RelativeLayout android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_vertical">-->

<!--            <ImageButton android:id="@+id/menu_individual_tv_item"-->
<!--                android:src="@drawable/ic_baseline_more_vert_24"-->
<!--                android:contentDescription="@string/app_name"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:gravity="center_vertical"-->
<!--                android:layout_alignParentStart="true" />-->

<!--            <TextView-->
<!--                android:id="@+id/forks_count_tv_item"-->
<!--                card_view:drawableStartCompat="@drawable/ic_git_branch"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:drawablePadding="8dp"-->
<!--                android:text="@string/forks_count"-->
<!--                android:textAppearance="?attr/textAppearanceListItem"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:gravity="center_vertical"-->
<!--                android:layout_toEndOf="@+id/menu_individual_tv_item" />-->

<!--            <TextView-->
<!--                android:id="@+id/starts_count_tv_item"-->
<!--                card_view:drawableStartCompat="@drawable/ic_star"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:drawablePadding="8dp"-->
<!--                android:text="@string/starts_count"-->
<!--                android:textAppearance="?attr/textAppearanceListItem"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:gravity="center_vertical"-->
<!--                android:layout_toEndOf="@+id/forks_count_tv_item"/>-->
<!--        </RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/menu_individual_tv_item"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:drawablePadding="8dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:contentDescription="@string/content_description_menu_item" />

            <TextView
                android:id="@+id/forks_count_tv_item"
                card_view:drawableStartCompat="@drawable/ic_git_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/forks_count"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/starts_count_tv_item"
                card_view:drawableStartCompat="@drawable/ic_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:drawablePadding="8dp"
                android:text="@string/starts_count"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description_tv_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
